--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   json_annotation: ">=4.6.0"
+  fl_chart: ^0.61.0
 
 
   # The following adds the Cupertino Icons font to your application.
